# socket-io-client

./: .gitignore  .gitmodules  CHANGELOG.md  ChangeLog.md  README.md  Setup.hs  bots.json  build-hs.sh  cabal.project  generals-bricks.cabal  generals-ui.cabal  generals.cabal  make.sh  package.json  package.yaml  shell.sh  socket-io-client.cabal  stack.yaml
GeneralsIO/: Protocol.hs  State.hs
Page/Replay/Widget/: ControlPanel.hs
app/: Frontend.hs  Main.hs  Main.js_hi  Main.js_o  SocketIO_FFI.hs
app/Common/: Imports.hs  Route.hs  Types.hs
app/Component/Button/: GameEnd.hs
app/Data/: CSS.hs
app/Frontend/: Imports.hs  Types.hs
app/Frontend/Imports/: TH.hs
app/Frontend/Types/: Constraints.hs  Internal.hs
app/Js/: SocketIO.hs  Utils.hs
app/Page/: Replay.hs  Setup.hs
app/Page/Game/: Grid.hs
client/GeneralsIO/: Commands.hs  Events.hs  Replays.hs
client/GeneralsIO/Commands/: Internal.hs
css/: ClayGrid.hs  ControlPanel.hs  Main.hs  Styles.hs
css/Clay/: Grid.hs
css/Clay_/: Grid.hs
cypress/integration/replay/: grid.spec.js
demo/: Main.hs
frontend/: frontend.cabal
generals-io-client/GeneralsIO/: Protocol.hs  State.hs  Strategy.hs
generals-io-client/GeneralsIO/Protocol/: Commands.hs  Events.hs  Phases.hs
generals-io-protocol/GeneralsIO/: Protocol.hs
generals-io-types/GeneralsIO/: Commands.hs  Events.hs
hs/: .gitignore  generals-ui.cabal  generals.cabal
hs/app/: Main.hs  SocketIO.hs  Types.hs
hs/app/Component/: AutoFocus.hs  Elastic.hs  FileDownload.hs  FileUpload.hs  Grid.hs  TableGrid.hs  TestBlock.hs
hs/app/Component/Button/: GameEnd.hs
hs/app/Component/Elastic/: Types.hs
hs/app/Data/: CSS.hs  Dom.hs
hs/app/Data/CSS/: Types.hs
hs/app/Data/Default/: Orphans.hs
hs/app/Data/Dom/: Internals.hs  Types.hs
hs/app/Generals/Map/: Types.hs
hs/app/Generals/Map/Types/: Definitions.hs  Optics.hs
hs/app/Js/: FFI.hs  Generals.hs  Imports.hs  SocketIO.hs  Types.hs  Utils.hs
hs/app/Page/: .Replay.hs.swp  Game.hs  Replay.hs  Setup.hs
hs/app/Page/Game/: Grid.hs
hs/app/Page/Replay/: Cache.hs  Decode.hs  Download.hs  Internals.hs  Orphans.hs  Simulate.hs  Types.hs  Utils.hs
hs/app/Page/Replay/Simulate/: Types.hs
hs/app/Page/Replay/Widget/: ControlPanel.hs  StatsPanel.hs
hs/brick-ui/: Main.hs  UI.hs
hs/brick-ui/UI/: Attrs.hs  Bot.hs  Events.hs  Replay.hs  Types.hs  Views.hs
hs/brick-ui/UI/Bot/: Attrs.hs  Events.hs  Forms.hs  Types.hs  Views.hs
hs/brick-ui/UI/Core/: Attrs.hs
hs/brick-ui/UI/Replay/: Attrs.hs  Events.hs  Forms.hs  Types.hs  Views.hs
hs/data-nat16/Data/: Nat16.hs
hs/data-zipper/Data/: Zipper.hs
hs/data-zipper/Data/Zipper/: Definition.hs  Operations.hs  TH.hs
hs/lib/: Types.hs
hs/lib/Generals/: Types.hs
hs/lib/Generals/Map/: Types.hs
hs/lib/Generals/Replay/: Decode.hs  Simulate.hs  Types.hs
hs/lib/Generals/Replays/: Types.hs
hs/lib/Node/: FFI.hs
hs/prelude/: Extra.hs  Prelude.hs
hs/prelude/Control/Lens/: Safe.hs  Unsafe.hs
hs/prelude/Data/: Nat16.hs
hs/prelude/Data/Show/: Class.hs
hs/prelude/Generals/: Imports.hs  Types.hs
hs/reflex-imports/: Reflex.hs
hs/reflex-imports/Reflex/: Element.hs  Instances.hs  Optics.hs  Types.hs  Utils.hs  Widget.hs
hs/reflex-widget/Reflex/: Widget.hs
hs/socket-io/: GeneralsIO.hs  Main.hs  SocketIO.hs
js/: cached-replays.js  download-replay  download-replay.js  index.html  index.js  new-socket-io.js  package.json  webpack.config.js
js/old-bot/: .gitignore  README.md  package.json
js/old-bot/bot/: env.js  index.js
js/old-bot/bot/strategy/: loadStrategy.js  strategy.js
js/old-bot/bot/utils/: colors.js  patch.js  prettyPrint.js  setUsername.js
js/old-bot/game/: index.js
js/public/: dist.js
js/src/: index.js
lib/: SocketIO.hs
old-bot/: LICENSE
old-bot/bot/selectors/: getMap.js
old-bot/bot/strategy/: changeHandler.js  makeMove.js
old-bot/bot/utils/: makeSafe.js  notifyQuit.js
parsers/GeneralsIO/: Commands.hs  Events.hs
public/: dist.js  index.html  service-worker.js
public/css/: control-panel.css  game.css  main.css  setup.css  tablegrid.css
public/saved/: replays.json
public/static/: service-worker.js
public/static/css/: control-panel.css  stats-panel.css  tablegrid.css
replays/: Sqp3G4qOv.gior  rtQyMFIwv.gior
scripts/: build-clay.sh  build-hs.sh  ghcjs-shell  init-project.sh  make.sh  shell.sh  watch-clay.sh  watch-css.sh  watch-hs.sh
server/: index.js
