cabal-version:  1.12
name:           generals-ui
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/CharlesTaylor7/generals-ui#readme>
homepage:       https://github.com/CharlesTaylor7/generals-ui#readme
bug-reports:    https://github.com/CharlesTaylor7/generals-ui/issues
author:         Charles Taylor
maintainer:     charlestaylor95@gmail.com
copyright:      2020 Charles Taylor
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/CharlesTaylor7/generals-ui

library
  other-modules:
      Paths_generals_ui
    , Common.Imports
    , Common.Types
    , Frontend.Imports
    , Frontend.Imports.TH
    , Frontend.Types
    , Frontend.Types.Constraints
    , Frontend.Types.Internal
    , Js.Generals
    , Js.SocketIO
    , Js.Utils
    , Page.Replay
    , SocketIO
  hs-source-dirs:
      src
  build-depends:
      base
    , reflex
    , reflex-dom
    , jsaddle
    , lens
    , relude
    , string-interpolate
    , aeson
  default-language: Haskell2010

executable generals-ui-exe
  main-is: Main.hs
  other-modules:
      Paths_generals_ui
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , generals-ui
    , reflex
    , reflex-dom
    , jsaddle
    , lens
    , relude
    , string-interpolate
    , aeson
  default-language: Haskell2010

test-suite generals-ui-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_generals_ui
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , generals-ui
    , reflex
  default-language: Haskell2010
