cabal-version:  1.12
name:           generals-ui
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/CharlesTaylor7/generals-ui#readme>
homepage:       https://github.com/CharlesTaylor7/generals-ui#readme
bug-reports:    https://github.com/CharlesTaylor7/generals-ui/issues
author:         Charles Taylor
maintainer:     charlestaylor95@gmail.com
copyright:      2020 Charles Taylor
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/CharlesTaylor7/generals-ui

library generals-prelude
  default-language: Haskell2010
  hs-source-dirs:
      hs/prelude
  exposed-modules:
      Imports
    , Types
  build-depends:
      base >=4.7 && <5
    , reflex
    , reflex-dom
    , jsaddle
    , lens
    , relude
    , string-interpolate
    , aeson

executable generals-app
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs:
    hs/app
  build-depends:
    generals-prelude
  other-modules:
      Js.Generals
    , Js.SocketIO
    , Js.Utils
    , Page.Game
    , Page.Setup
    , Page.Replay
    , SocketIO

  ghc-options: -threaded -rtsopts -with-rtsopts=-N
