cabal-version:  2.2
name:           generals
version:        0.0.0.0
author:         Charles Taylor
maintainer:     charlestaylor95@gmail.com
copyright:      2020 Charles Taylor
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/CharlesTaylor7/generals-bot

common common
  default-language: Haskell2010
  ghc-options:
      -freverse-errors
      -ferror-spans
      -Werror=missing-home-modules
      -fwarn-incomplete-patterns
      -O0 -j2 +RTS -A128m -n2m -qg -RTS

  default-extensions:
    -- required to make type aliases
      RankNTypes
    , FlexibleContexts
    , TypeFamilies
    , ConstraintKinds
    -- deriving extensions
    , StandaloneDeriving
    , DeriveGeneric
    , DerivingVia
    , GeneralizedNewtypeDeriving
    , DeriveFunctor
    , DeriveTraversable
    , EmptyDataDeriving
    , DeriveAnyClass
    -- required to effectively document code
    , ScopedTypeVariables
    -- awesome debugging by having the compiler tell you the type of something
    , PartialTypeSignatures
    -- patterns
    , PatternSynonyms
    , ViewPatterns
    -- nice to have
    , OverloadedStrings
    , BangPatterns
    , TypeApplications
    , LambdaCase
    , TupleSections
    , BlockArguments
    , NumericUnderscores
    , NamedFieldPuns
    -- generic lens
    , DuplicateRecordFields
    , OverloadedLabels

library generals-prelude
  import: common
  hs-source-dirs:
      hs/prelude
  build-depends:
      base >= 4.13 && < 5.0
    , relude
    , lens >= 4.19.2 && < 5.0
    , profunctors
    , generic-lens
    , vector
    , containers
    , mtl
    , data-default
    , these
    , semialign
    , generic-monoid
  exposed-modules:
      Prelude
    , Control.Lens.Unsafe
    , Control.Lens.Safe

library generals-lib
  import: common
  hs-source-dirs:
    hs/lib
  build-depends:
      generals-prelude
    , lz-string
    , process
    , text
    , aeson
    , vector
    , groups
    , primitive
    , mtl
    , containers
  exposed-modules:
      Node.FFI
    , Generals.Replay.Decode
    , Generals.Replay.Simulate
    , Types

executable generals-brick-ui
  import: common
  main-is: Main.hs
  hs-source-dirs:
    hs/brick-ui
  build-depends:
      generals-prelude
    , generals-lib
    , containers
    , brick
    , vty
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    UI
