cabal-version:  2.2
name:           generals
version:        0.0.0.0
author:         Charles Taylor
maintainer:     charlestaylor95@gmail.com
copyright:      2020 Charles Taylor
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/CharlesTaylor7/generals-bot

common common
  default-language: Haskell2010
  -- Faster linking https://stackoverflow.com/questions/43243322/how-to-link-with-the-gnu-gold-linker-instead-of-ld-in-haskell?answertab=oldest#tab-top
  ld-options:  -fuse-ld=gold
  ghc-options:
    -optl-fuse-ld=gold
    -freverse-errors
    -ferror-spans
    -fno-warn-name-shadowing
    -Werror=missing-home-modules
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -O0 -j2 +RTS -A128m -n2m -qg -RTS

  default-extensions:
    -- required to make type aliases
      RankNTypes
    , FlexibleContexts
    , TypeFamilies
    , ConstraintKinds
    -- deriving extensions
    , StandaloneDeriving
    , DeriveGeneric
    , DerivingVia
    , GeneralizedNewtypeDeriving
    , DeriveFunctor
    , DeriveTraversable
    , EmptyDataDeriving
    , DeriveAnyClass
    -- required to effectively document code
    , ScopedTypeVariables
    -- awesome debugging by having the compiler tell you the type of something
    , PartialTypeSignatures
    -- patterns
    , PatternSynonyms
    , ViewPatterns
    -- nice to have
    , OverloadedStrings
    , BangPatterns
    , TypeApplications
    , LambdaCase
    , TupleSections
    , BlockArguments
    , NumericUnderscores
    , NamedFieldPuns
    -- generic lens
    , DuplicateRecordFields
    , OverloadedLabels

library generals-prelude
  import: common
  hs-source-dirs:
      hs/prelude
  build-depends:
      base >= 4.13 && < 5.0
    , relude
    , lens >= 4.19.2 && < 5.0
    , profunctors
    , generic-lens
    , vector
    , containers
    , mtl
    , data-default
    , generic-monoid
  exposed-modules:
      Prelude
    , Control.Lens.Unsafe
    , Control.Lens.Safe

library socket-io
  default-language: Haskell2010
  -- Faster linking https://stackoverflow.com/questions/43243322/how-to-link-with-the-gnu-gold-linker-instead-of-ld-in-haskell?answertab=oldest#tab-top
  ld-options:  -fuse-ld=gold
  ghc-options:
    -optl-fuse-ld=gold
    -freverse-errors
    -ferror-spans
    -fno-warn-name-shadowing
    -Werror=missing-home-modules
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -O0 -j2 +RTS -A128m -n2m -qg -RTS
  hs-source-dirs:
    hs/socket-io
  build-depends:
      base >= 4.13 && < 5.0
    , process
    , uuid
    , text
    , aeson
    , generic-lens
    , microlens
    , bytestring
  exposed-modules:
      SocketIO
    , GeneralsIO
  other-modules:
      Main


library generals-lib
  import: common
  hs-source-dirs:
    hs/lib
  build-depends:
      generals-prelude
    , lz-string
    , base64-bytestring
    , bytestring
    , process
    , text
    , aeson
    , vector
    , groups
    , primitive
    , mtl
    , containers
  exposed-modules:
      Node.FFI
    , Generals.Replay.Decode
    , Generals.Replay.Simulate
    , Types

executable brick-ui
  import: common
  main-is: Main.hs
  hs-source-dirs:
    hs/brick-ui
  build-depends:
      generals-prelude
    , generals-lib
    , containers
    , brick
    , brick-grid
    , vty
    , text
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
    -Wall
  other-modules:
      UI.Bot
    , UI.Replay
    , UI.Replay.Types
    , UI.Replay.Attrs
    , UI.Replay.Events
    , UI.Replay.Views
    , UI.Replay.Forms
