cabal-version:  2.2
name:           socket-io-client
version:        0.0.0.0
author:         Charles Taylor
maintainer:     charlestaylor95@gmail.com
copyright:      2020 Charles Taylor
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/CharlesTaylor7/socket-io-client

common common
  default-language: Haskell2010
  ghc-options:
    -freverse-errors
    -ferror-spans
    -- turn on most warnings
    -Wall
    -- don't warn about name shadowing
    -fno-warn-name-shadowing
    -fno-warn-unticked-promoted-constructors
    -- errors on these
    -Werror=missing-home-modules
    -Werror=incomplete-patterns
    -Werror=missing-fields


library
  import: common
  hs-source-dirs:
    lib/
  build-depends:
      base >= 4.13 && < 5.0
    , process
    , aeson
    , bytestring
    , pipes
  exposed-modules:
      SocketIO

library generals-io-types
  import: common
  hs-source-dirs:
    generals-io-types/
  build-depends:
      base >= 4.13 && < 5.0
    , aeson
    , bytestring
    , vector
    , text
    , unordered-containers
  exposed-modules:
      GeneralsIO.Events
    , GeneralsIO.Commands
    , GeneralsIO.Replays


library generals-io-client
  import: common
  hs-source-dirs:
    generals-io-client/
  build-depends:
      base >= 4.13 && < 5.0
    , socket-io-client
    , generals-io-types
    , aeson
    , bytestring
    , vector
    , text
    , containers
    , pipes
    , generic-lens
    , lens
    , uuid
    , mtl
  exposed-modules:
      GeneralsIO.Protocol
    , GeneralsIO.Strategy

  other-modules:
      GeneralsIO.Protocol.Phases
    , GeneralsIO.Protocol.Events
    , GeneralsIO.Protocol.Commands
    , GeneralsIO.State

executable demo
  import: common
  hs-source-dirs:
    demo/
  main-is:
    Main.hs
  ghc-options:
    -threaded
  build-depends:
      base >= 4.13 && < 5.0
    , socket-io-client
    , generals-io-types
    , generals-io-client
    , aeson
    , bytestring
    , pipes
