cabal-version:  2.2
name:           socket-io-client
version:        0.0.0.0
author:         Charles Taylor
maintainer:     charlestaylor95@gmail.com
copyright:      2020 Charles Taylor
build-type:     Simple
extra-source-files:
  LICENSE
data-files:
  js/*.js
  js/package.json
  js/yarn.lock



source-repository head
  type: git
  location: https://github.com/CharlesTaylor7/socket-io-client

common common
  default-language: Haskell2010
  ghc-options:
    -freverse-errors
    -ferror-spans
    -- turn on most warnings
    -Wall
    -- don't warn about name shadowing
    -fno-warn-name-shadowing
    -- errors on these
    -Werror=missing-home-modules
    -Werror=incomplete-patterns
    -Werror=missing-fields


library
  import: common
  hs-source-dirs:
    lib/
  build-depends:
      base >= 4.13 && < 5.0
    , process
    , bytestring
    , pipes
  exposed-modules:
      SocketIO
