cabal-version:  1.12
name:           generals-ui
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/CharlesTaylor7/generals-ui#readme>
homepage:       https://github.com/CharlesTaylor7/generals-ui#readme
bug-reports:    https://github.com/CharlesTaylor7/generals-ui/issues
author:         Charles Taylor
maintainer:     charlestaylor95@gmail.com
copyright:      2020 Charles Taylor
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/CharlesTaylor7/generals-ui

library reflex-widget
  default-language: Haskell2010
  hs-source-dirs:
      reflex-widget
  exposed-modules:
      Reflex.Widget
  build-depends:
      base >= 4.7 && <5.0
    , relude
    , reflex-dom

library generals-prelude
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
  hs-source-dirs:
      prelude
  exposed-modules:
      Generals.Imports
    , Generals.Types
  build-depends:
      base >= 4.7 && <5.0
    , reflex-widget
    , relude
    , reflex
    , reflex-dom
    , jsaddle
    , lens
    , aeson
    , data-default

executable generals-app
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
  main-is: Main.hs
  hs-source-dirs:
    app
  build-depends:
      generals-prelude
    , reflex-widget
    , ghcjs-base
    , jsaddle
    , relude
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
