cabal-version:  2.2
name:           generals
version:        0.0.0.0
author:         Charles Taylor
maintainer:     charlestaylor95@gmail.com
copyright:      2020 Charles Taylor
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/CharlesTaylor7/generals-bot

common common
  default-language: Haskell2010
  ghc-options:
      -Werror=missing-home-modules
      -fwarn-incomplete-patterns
      -O0 -j2 +RTS -A128m -n2m -qg -RTS

library reflex-imports
  import: common
  hs-source-dirs:
      reflex-imports
  exposed-modules:
      Reflex
  other-modules:
      Reflex.Element
    , Reflex.Optics
    , Reflex.Utils
    , Reflex.Widget
  build-depends:
      base >= 4.7 && <5.0
    , reflex-dom
    , ghcjs-dom
    , lens
    , data-default

library generals-prelude
  import: common
  hs-source-dirs:
      prelude
  exposed-modules:
      Prelude
  build-depends:
      base >= 4.7 && < 5.0
    , relude
    , lens >= 4.18 && < 5.0
    , data-default

executable generals-app
  import: common
  main-is: Main.hs
  hs-source-dirs:
    app
  build-depends:
      generals-prelude
    , reflex-imports
    , ghcjs-base
    , ghcjs-dom
    , jsaddle
    , aeson
    , data-default
    , vector
    , containers
    , mtl
    , groups
    , these
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    -- required to make type aliases for reflex constraints
      RankNTypes
    , FlexibleContexts
    , TypeFamilies
    , ConstraintKinds
    -- deriving extensions
    , StandaloneDeriving
    , DeriveGeneric
    , DerivingVia
    , GeneralizedNewtypeDeriving
    -- required to put type signatures on context bound functions
    , ScopedTypeVariables
    -- required to effectively use reflex
    , RecursiveDo
    -- patterns
    , PatternSynonyms
    , ViewPatterns
    -- nice to have
    , OverloadedStrings
    , TypeApplications
    , LambdaCase
    , TupleSections
  other-modules:
      Types
    , Page.Replay
    , Page.Replay.Simulate
    , Page.Replay.Simulate.Types
    , Page.Replay.Decode
    , Page.Replay.Download
    , Page.Replay.Types
    , Generals.Map.Types
    , Generals.Map.Types.Definitions
    , Generals.Map.Types.Optics
    , Component.AutoFocus
    , Component.Elastic
    , Component.Grid
    , Js.FFI
    , Js.Imports
    , Js.Utils
    , Js.Types
    , Data.CSS
    , Data.CSS.Types
    , Data.Dom
    , Data.Dom.Internals
