cabal-version:  2.2
name:           generals
version:        0.0.0.0
author:         Charles Taylor
maintainer:     charlestaylor95@gmail.com
copyright:      2020 Charles Taylor
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/CharlesTaylor7/generals-bot

common common
  default-language: Haskell2010
  ghc-options:
      -freverse-errors
      -ferror-spans
      -Werror=missing-home-modules
      -fwarn-incomplete-patterns
      -O0 -j2 +RTS -A128m -n2m -qg -RTS

library reflex-imports
  import: common
  hs-source-dirs:
      reflex-imports
  exposed-modules:
      Reflex
  other-modules:
      Reflex.Element
    , Reflex.Instances
    , Reflex.Optics
    , Reflex.Types
    , Reflex.Utils
  build-depends:
      base >= 4.7 && <5.0
    , reflex-dom
    , ghcjs-dom
    , lens
    , data-default

library generals-prelude
  import: common
  hs-source-dirs:
      prelude
  exposed-modules:
      Prelude
    , Control.Lens.Unsafe
    , Control.Lens.Safe
  build-depends:
      base >= 4.7 && < 5.0
    , relude
    , lens >= 4.19.2 && < 5.0
    , profunctors
    , vector
    , containers
    , mtl
    , data-default
    , these

executable generals-app
  import: common
  main-is: Main.hs
  hs-source-dirs:
    app
  build-depends:
      generals-prelude
    , reflex-imports
    , ghcjs-base
    , ghcjs-dom
    , jsaddle
    , aeson
    , vector
    , vector-sized
    , finite-typelits
    , containers
    , mtl
    , groups
    , primitive
    , semialign
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    -- required to make type aliases for reflex constraints
      RankNTypes
    , FlexibleContexts
    , TypeFamilies
    , ConstraintKinds
    -- deriving extensions
    , StandaloneDeriving
    , DeriveGeneric
    , DerivingVia
    , GeneralizedNewtypeDeriving
    , DeriveFunctor
    , DeriveTraversable
    -- required to effectively document code
    , ScopedTypeVariables
    -- required to effectively use reflex
    , RecursiveDo
    -- awesome debugging by having the compiler tell you the type of something
    , PartialTypeSignatures
    -- patterns
    , PatternSynonyms
    , ViewPatterns
    -- nice to have
    , OverloadedStrings
    , BangPatterns
    , TypeApplications
    , LambdaCase
    , TupleSections
    , BlockArguments
  other-modules:
      Types
    , Page.Replay
    , Page.Replay.Simulate
    , Page.Replay.Simulate.Types
    , Page.Replay.Decode
    , Page.Replay.Download
    , Page.Replay.Types
    , Page.Replay.Utils
    , Page.Replay.Widget.ControlPanel
    , Page.Replay.Widget.StatsPanel
    , Generals.Map.Types
    , Generals.Map.Types.Definitions
    , Generals.Map.Types.Optics
    , Component.Elastic
    , Component.Elastic.Types
    , Component.Grid
    , Component.TestBlock
    , Js.FFI
    , Js.Imports
    , Js.Utils
    , Js.Types
    , Data.CSS
    , Data.CSS.Types
    , Data.Dom
    , Data.Dom.Internals
